Fixed send button alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,6 +77,7 @@ a {
 .button {
   cursor: pointer;
   padding: 5px 15px;
+  margin-left: 25px;
   background: var(--light-color);
   color: var(--theme-color-1);
   border: 0;
